<resources>
    <string name="app_name">PayCalc</string>
    <string name="action_settings">Settings</string>
    <string name="regular_wages">Regular Wages</string>
    <string name="supplemental_wages">Supplemental Wages</string>
    <string name="total_wages">Total Wages</string>
    <string name="_20_00">20.00</string>
    <string name="_420_00">420.00</string>
    <string name="_1000_00">1000.00</string>
    <string name="_0_00">0.00</string>
    <string name="_0">0</string>
    <string name="calc">Calc</string>
    <string name="pre_fica_wages">Pre-FICA Wages</string>
    <string name="pre_tax_wages">Pre-Tax Wages</string>
    <string name="oasdi">OASDI</string>
    <string name="medicare">Medicare</string>
    <string name="state">State</string>
    <string name="selected_item">Selected item:</string>
    <string name="state_tax">State Tax</string>
    <string name="federal_tax">Federal Tax</string>

    <string name="federal_election">Federal Election</string>
    <string name="marital_status">Marital Status</string>
    <string name="state_election">State Election</string>
    <string name="allowances">Allowances</string>
    <string name="additional_medicare">Additional Medicare</string>
    <string name="save">Save</string>
    <string name="elections">Elections</string>
    <string name="additional_amount">Additional Amount</string>
    <string name="net_pay">Net Pay</string>
    <string name="frequency">Frequency</string>
    <string name="exemption">Exemption</string>
    <string name="dependents">Dependents</string>
    <string name="constant_percentage">Constant Percentage</string>

    <string-array name="frequencies">
        <item>Weekly</item>
        <item>Biweekly</item>
        <item>Semimonthly</item>
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Semiannually</item>
        <item>Annually</item>
        <item>Daily</item>
    </string-array>

    <string-array name="fed_marital_statuses">
        <item>Single</item>
        <item>Married</item>
        <item>Married, but withhold at higher Single rate</item>
    </string-array>

    <string-array name="states">
        <item>------</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string-array name="alabama_exemptions">
        <item>Zero (0)</item>
        <item>Single (S)</item>
        <item>Married Filing Separately (MS)</item>
        <item>Married Filing Jointly (M)</item>
        <item>Head of Family (H)</item>
    </string-array>

    <string-array name="arizona_percentages">
        <item>0.8%</item>
        <item>1.3%</item>
        <item>1.8%</item>
        <item>2.7%</item>
        <item>3.6%</item>
        <item>4.2%</item>
        <item>5.1%</item>
    </string-array>

</resources>
