<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Frequency -->

        <TextView
            android:id="@+id/label_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusedByDefault="false"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_frequency" />

        <!-- Federal -->
        <TextView
            android:id="@+id/header_federal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xlarge"
            android:text="@string/federal_election"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_frequency" />

        <!-- Federal Marital Status -->

        <TextView
            android:id="@+id/label_fed_marital_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marital_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_federal" />

        <Spinner
            android:id="@+id/spinner_fed_marital_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusedByDefault="false"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_fed_marital_status" />

        <!-- Federal Allowances -->

        <TextView
            android:id="@+id/label_fed_allowances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allowances"
            app:layout_constraintBottom_toBottomOf="@id/et_fed_allowances"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_fed_allowances" />

        <EditText
            android:id="@+id/et_fed_allowances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusedByDefault="false"
            android:gravity="end"
            android:hint="@string/_0"
            android:importantForAutofill="no"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="@string/_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_fed_marital_status" />

        <!-- Federal Additional Amount -->

        <TextView
            android:id="@+id/label_fed_addl_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_amount"
            app:layout_constraintBottom_toBottomOf="@id/et_fed_addl_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_fed_addl_amount" />

        <EditText
            android:id="@+id/et_fed_addl_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusedByDefault="false"
            android:gravity="end"
            android:hint="@string/_0_00"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@string/_0_00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_fed_allowances" />

        <!-- State -->

        <TextView
            android:id="@+id/header_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xlarge"
            android:text="@string/state_election"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_fed_addl_amount" />

        <!-- State -->

        <TextView
            android:id="@+id/label_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_state" />

        <Spinner
            android:id="@+id/spinner_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:focusedByDefault="false"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/label_state" />

        <!-- Dependents (Alabama, Arkansas) -->

        <TextView
            android:id="@+id/label_dependents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/dependents"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_state" />

        <EditText
            android:id="@+id/et_dependents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusedByDefault="false"
            android:gravity="end"
            android:hint="@string/_0"
            android:importantForAutofill="no"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="@string/_0"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/label_dependents" />

        <!-- Alabama -->

        <!-- Alabama Exemption -->

        <TextView
            android:id="@+id/label_alabama_exemption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/exemption"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_dependents" />

        <Spinner
            android:id="@+id/spinner_alabama_exemption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:focusedByDefault="false"
            android:gravity="end"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_alabama_exemption" />

        <!-- Arizona -->

        <!-- Arizona Constant Rate -->

        <TextView
            android:id="@+id/label_arizona_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/constant_percentage"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_dependents" />

        <Spinner
            android:id="@+id/spinner_arizona_percentage"
            android:layout_margin="@dimen/margin_small"
            android:focusedByDefault="false"
            android:gravity="end"
            android:visibility="gone"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_arizona_percent"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>